moved style attributes out of forms and into css; fixed typo

--- a/core/templates/search_advanced.html
+++ b/core/templates/search_advanced.html
@@ -4,7 +4,7 @@
 {% load humanize %}
 
 {% block head_content %}{{ block.super }}
-<link href="{% static 'bootstrap/css/datepicke.css' %}" rel="stylesheet" media="screen">
+<link href="{% static 'bootstrap/css/datepicker.css' %}" rel="stylesheet" media="screen">
 {% endblock head_content %}
 {% block subcontent %}
 <div>
