--- a/loc/templates/includes/tabs.html
+++ b/loc/templates/includes/tabs.html
@@ -28,7 +28,7 @@
                 {{ search_form.date2 }}
                 <span class="plus">+</span>
                 <!-- search text field -->
-                {{ search_form.proxtext }}<input type="image"  alt="GO" src="{% static 'images/btn_go.png' %}" class="ortext-btn" />
+                {{ search_form.proxtext }}<input type="image"  alt="GO" src="{% static 'images/btn_go.png' %}" class="proxtext-btn" />
                 <input type="hidden" name="dateFilterType" alt="dateFilterType" value="yearRange" />
                 <input type="hidden" name="rows" id="rows" alt="rows" value="20" />
                 <input type="hidden" name="searchType" alt="searchType" value="basic" />
