--- a/loc/templates/base.html
+++ b/loc/templates/base.html
@@ -105,7 +105,21 @@
 
 <script type="text/javascript">
 jQuery(function ($) {
-    $('#tabs-container').load('/tabs', function() {
+    var searchString = window.location.search.substring(1);
+    if (searchString) {
+        var vars = {}, hash,
+        hashes = searchString.split("&");
+        for(var i=0; i<hashes.length; i++){
+            hash = hashes[i].split('=');
+            vars[unescape(hash[0])] = unescape(hash[1]);
+        }
+    }
+    if (typeof vars === "undefined"){
+        tab_url = '/tabs';
+    } else {
+        tab_url = '/tabs?' + $.param(vars);
+    }
+    $('#tabs-container').load(tab_url, function() {
         $("#tabs-container").trigger('chronam.tabsloaded', {});
     });
 });
