Edit to the help text to refer to GitHub instead of SourceForge, fixes #1203.

--- a/core/templates/about_api.html
+++ b/core/templates/about_api.html
@@ -26,8 +26,8 @@ around the site, &quot;view source&quot; often, and follow where the
 different links take you to get started.  When describing Chronicling America as the source of content, please use the URL and a Web site citation, such as &quot;from the Library of Congress, Chronicling America: Historic American Newspapers site&quot;.</p> 
 
 <p>For more information about the open source Chronicling America software 
-please see the <a href="http://loc-ndnp.sf.net">loc-ndnp</a> SourceForge site.
-Also, please consider subscribing to the <a href="https://sourceforge.net/mailarchive/forum.php?forum_name=loc-ndnp-mail">loc-ndnp-mail</a> discussion list
+please see the <a href="https://github.com/LibraryofCongress/chronam">LibraryOfCongress/chronam</a> GitHub site.
+Also, please consider subscribing to the <a href="http://listserv.loc.gov/archives/chronam-users.html">ChronAm-Users</a> discussion list
 if you want to discuss how to use or extend the software or data from its
 APIs.</p>
  
