t fixes #1354: Fixes display of states on holdings.

--- a/core/templates/holdings.html
+++ b/core/templates/holdings.html
@@ -18,7 +18,7 @@
       <hr/>
       {% endif %}
       <br/>
-      <h3>HOLDING: {{inst_holding.grouper.name}}, {{inst_holding.grouper.city}}, {{inst_holding.group.state}}</h3>
+      <h3>HOLDING: {{inst_holding.grouper.name}}, {{inst_holding.grouper.city}}, {{inst_holding.grouper.state}}</h3>
 
       <p>
         <img src="{% static 'img-std/i_arrow_o.gif' %}" width="9" height="9" alt=""/>
