--- a/loc/templates/page.html
+++ b/loc/templates/page.html
@@ -3,12 +3,12 @@
 
 {% block javascript %}
 {{ block.super }}
-    <script type="text/javascript" src="{% static 'js/openseadragon.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/openseadragon.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/jquery.ba-bbq.min.js' %}"></script> 
     <script type="text/javascript" src="{% static 'js/page.js' %}"></script>
 
     <div id="page_data"
-	 data-static_url="{% static '' %}",
+	 data-static_url="{% static '' %}images/",
 	 data-width="{{page.jp2_width}}"
 	 data-height="{{page.jp2_length}}"
 	 data-page_url="{% url chronam_page title.lccn,issue.date_issued,issue.edition,page.sequence %}"
