refs #1352: Allows 866/description on holdings to be blank which loads >50k more holdings from Chronam holdings. refs #1355: Fixes ordering on the title holdings list page.

--- a/core/templates/holdings.html
+++ b/core/templates/holdings.html
@@ -27,12 +27,14 @@
 
       {% for holding in inst_holding.list %}
         <h4 class="holding">Available as: {% if holding.type %}{{ holding.type }}{% else %}Unspecified{% endif %}</h4>
-        <p class="holding">Dates:</p>
+      {% if holding.description %}
+      <p class="holding">Dates:</p>
       <ul class="holding">
           {% for description in holding.description_as_list %}
             <li>{{ description }}</li>
           {% endfor %}
       </ul>
+      {% endif %}
       <p class="holding">Last updated: {{ holding.last_updated }}</p>
       {% endfor %}
     <br/>
