Fixing ordering on holdings page.

--- a/core/templates/holdings.html
+++ b/core/templates/holdings.html
@@ -11,9 +11,9 @@
 
   {% endif %}
 
-    {% regroup holdings|dictsort:"institution" by institution as inst_holdings %}
-    {% for inst_holding in inst_holdings %}
+    {% regroup holdings by institution as inst_holdings %}
 
+    {% for inst_holding in inst_holdings %}
       {% if not forloop.first %}
       <hr/>
       {% endif %}
