--- a/core/templates/holdings.html
+++ b/core/templates/holdings.html
@@ -27,15 +27,20 @@
 
       {% for holding in inst_holding.list %}
         <h4 class="holding">Available as: {% if holding.type %}{{ holding.type }}{% else %}Unspecified{% endif %}</h4>
-      {% if holding.description %}
-      <p class="holding">Dates:</p>
-      <ul class="holding">
+        
+        {% if holding.notes %}
+        <p class="holding">{{ holding.notes }}</p>
+        {% endif %}
+
+        {% if holding.description %}
+        <p class="holding">Dates:</p>
+        <ul class="holding">
           {% for description in holding.description_as_list %}
             <li>{{ description }}</li>
           {% endfor %}
-      </ul>
-      {% endif %}
-      <p class="holding">Last updated: {{ holding.last_updated }}</p>
+        </ul>
+        {% endif %}
+        <p class="holding">Last updated: {{ holding.last_updated }}</p>
       {% endfor %}
     <br/>
   {% endfor %}
