--- a/core/static/css/tablesort.css
+++ b/core/static/css/tablesort.css
@@ -1,9 +1,18 @@
+table.tablesorter { border-collapse:collapse; }
+table.tablesorter td, table.tablesorter th { 
+    border-left: 1px solid #ccc
+}
+
+table.tablesorter tbody tr.odd td {
+    background-color:#fdfeee;
+}
 
 table.tablesorter thead tr .header {
     background-image: url(../images/bg.gif);
     background-repeat: no-repeat;
     background-position: center right;
     cursor: pointer;
+    padding-left: 20px;
 }
 
 table.tablesorter thead tr .headerSortUp {
@@ -14,6 +23,3 @@ table.tablesorter thead tr .headerSortDown {
     background-image: url(../images/desc.gif);
 }
 
-table.tablesorter tbody tr.odd td {
-    background-color:#fdfeee;
-}
