modified tabs to be bookmarkable

--- a/loc/templates/includes/tabs.html
+++ b/loc/templates/includes/tabs.html
@@ -154,3 +154,4 @@
 </div><!-- end box-tabs -->
 
 <script src="{% static 'js/main.js' %}"></script>
+<script src="{% static 'js/jquery.ba-bbq.min.js' %}"></script> 
