refs #33: Adding secondary sort to newspaper list page.

--- a/core/templates/newspapers.html
+++ b/core/templates/newspapers.html
@@ -64,7 +64,8 @@
                 2: { sorter: false }, 
                 6: { sorter: false } 
             }, 
-            widgets: ['zebra']
+            widgets: ['zebra'],
+            sortList: [[0,0],[1,0]]
         }); 
     });
 
