Removed left border from table, b/c there was a double line showing. refs #29: Added summary statement to newspaper directory page & adding language display functionality. refs #33: Improved directory page sort -- primary sort is state when all newspaper, then moved to title on state filter.

--- a/core/static/css/tablesort.css
+++ b/core/static/css/tablesort.css
@@ -1,6 +1,11 @@
 table.tablesorter { border-collapse:collapse; }
+
 table.tablesorter td, table.tablesorter th { 
     border-left: 1px solid #ccc
+}
+
+table.tablesorter .left_no_border {
+    border-left: None
 }
 
 table.tablesorter tbody tr.odd td {
