--- a/core/templates/newspapers.html
+++ b/core/templates/newspapers.html
@@ -11,13 +11,18 @@
 
 {% block subcontent %}
 {% if titles.count > 0 %}
-<p class="gray nomargin-bottom3">These historical newspapers are available to browse and view issues in this site. {% if number_of_pages %}Pages currently available: {{number_of_pages|intcomma}}{% endif %}</p>
-
+<p class="gray nomargin-bottom3">
+    A total of <strong>{{ titles.count|apnumber|intcomma }}</strong> historical newspapers
+    {% if state %}from <strong>{{ state }}</strong>{% endif %}
+    {% if language_display %}in the <strong>{{ language_display }}</strong> language{% endif %}
+    {% if titles.count == 1 %}is{% else %}are{% endif %} available to browse and view in this site. 
+    {% if number_of_pages %}Pages currently available: {{number_of_pages|intcomma}}{% endif %}
+</p>
 <div class="browse_collect_body">
     <table id="newspapers" class="table table-striped table-hover browse_collect tablesorter" cellspacing="0" summary="">
         <thead>
         <tr>
-            <th class="headerSortDown">State</th>
+            <th class="headerSortDown left_no_border">State</th>
             <th>Newspaper</th>
             <th>Browse Issues</th>
             <th>No. of Issues</th>
@@ -31,7 +36,7 @@
         {% for title in titles %}
             {% with title.lccn as lccn %}
             <tr>
-                <td class="first"><a {% ifchanged state %}name="{{state}}" {% endifchanged %}href="{% url chronam_newspapers_state state|pack_url %}">{{state}}</a></td>
+                <td class="first left_no_border"><a {% ifchanged state %}name="{{state}}" {% endifchanged %}href="{% url chronam_newspapers_state state|pack_url %}">{{state}}</a></td>
                 <td><a href="{% url chronam_title lccn %}"><strong>{{title.display_name}}</strong></a><br />{{title.place_of_publication}}, {{title.start_year}}-{{title.end_year}}</td>
                 <td><a href="{% url chronam_issues lccn %}" shape="rect"><img src="{% static 'images/calendar_icon.gif' %}" alt="calendar"/></a></td>
                 <td>{{title.issues.count}}</td>
@@ -60,12 +65,14 @@
     $(document).ready(function() { 
         $("#newspapers").tablesorter({ 
             headers: { 
+                {% if state %}0: { sorter: false},{% endif %}
                 1: { sorter: 'newspapers' },
                 2: { sorter: false }, 
                 6: { sorter: false } 
             }, 
             widgets: ['zebra'],
-            sortList: [[0,0],[1,0]]
+            // for all newspapers, sort on state. If state, then sort on title.
+            sortList: [{% if not state %}[0,0]{% else %}[1,0]{% endif %},]
         }); 
     });
 
