--- a/example/templates/site.html
+++ b/example/templates/site.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head profile="http://dublincore.org/documents/2008/08/04/dc-html/">{% block head_content %}
     <meta charset="utf-8">
-    <title>{% if page_title %}{{page_title}} « {% endif %}{% if site_title %}{{site_title}} « {% endif %}David is Cool</title>
+    <title>{% if page_title %}{{page_title}} « {% endif %}{% if site_title %}{{site_title}} « {% endif %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
