--- a/core/templates/newspapers.html
+++ b/core/templates/newspapers.html
@@ -11,13 +11,16 @@
 
 {% block subcontent %}
 {% if titles.count > 0 %}
-<p class="gray nomargin-bottom3">
-    A total of <strong>{{ titles.count|apnumber|intcomma }} historical newspaper{% if titles.count > 1 %}s{% endif %}</strong> 
-    {% if state %}from <strong>{{ state }}</strong>{% endif %}
-    {% if language_display %}in the <strong>{{ language_display }}</strong> language{% endif %}
-    {% if titles.count == 1 %}is{% else %}are{% endif %} available to browse and view in this site. 
-</p>
-<div class="browse_collect_body">
+<div class="search_results_body">
+    <div class="results_nav">
+        <p class="term">
+            {{ titles.count|intcomma }} newspaper{% if titles.count > 1 %}s{% endif %}
+            {% if state %}from <strong>{{ state }}</strong>{% endif %}
+            {% if ethnicity %}filtered on <strong>{{ ethnicity }}</strong>{% endif %} 
+            {% if language_display %}in <strong>{{ language_display }}</strong>{% endif %}
+            {% if titles.count == 1 %}is{% else %}are{% endif %} available for viewing on this site. 
+        </p>
+    </div>
     <table id="newspapers" class="table table-striped table-hover browse_collect tablesorter" cellspacing="0" summary="">
         <thead>
         <tr>
@@ -61,20 +64,6 @@
 {% block javascript %}{{ block.super }}
 <script type="text/javascript" src="{% static 'js/jquery.tablesorter.min.js' %}"></script>
 <script type="text/javascript">
-    $(document).ready(function() { 
-        $("#newspapers").tablesorter({ 
-            headers: { 
-                {% if state %}0: { sorter: false},{% endif %}
-                1: { sorter: 'newspapers' },
-                2: { sorter: false }, 
-                6: { sorter: false } 
-            }, 
-            widgets: ['zebra'],
-            // for all newspapers, sort on state. If state, then sort on title.
-            sortList: [{% if not state %}[0,0]{% else %}[1,0]{% endif %},]
-        }); 
-    });
-
     // add parser through the tablesorter addParser method 
     $.tablesorter.addParser({ 
         // set a unique id 
@@ -104,6 +93,19 @@
         type: 'text' 
     }); 
 
+    $(document).ready(function() { 
+        $("#newspapers").tablesorter({ 
+            headers: { 
+                {% if state %}0: { sorter: false},{% endif %}
+                1: { sorter: 'newspapers' },
+                2: { sorter: false }, 
+                6: { sorter: false } 
+            }, 
+            widgets: ['zebra'],
+            // for all newspapers, sort on state. If state, then sort on title.
+            sortList: [{% if not state %}[0,0],{% else %}[1,0],{% endif %}]
+        }); 
+    });
 
 </script>
 
