Adding a descriptive not to js.

--- a/core/templates/newspapers.html
+++ b/core/templates/newspapers.html
@@ -64,6 +64,8 @@
 {% block javascript %}{{ block.super }}
 <script type="text/javascript" src="{% static 'js/jquery.tablesorter.min.js' %}"></script>
 <script type="text/javascript">
+    // Customization for tablesorter. Works in conjunction with jquery.tablsorter.min.js
+
     // add parser through the tablesorter addParser method 
     $.tablesorter.addParser({ 
         // set a unique id 
