refs #4: modified html and css for issues page to be compatible with bootstrap

--- a/core/templates/issues.html
+++ b/core/templates/issues.html
@@ -37,7 +37,7 @@ jQuery(function($){
 {% endblock %}
 
 {% block newspaper_content %}
-<div id="col2_right"> 
+<div id="col2_right" class='row'> 
     {{year_view|safe}}
 </div><!-- end id:col2_right --> 
 {% endblock %}
