--- a/core/templates/newspaper.html
+++ b/core/templates/newspaper.html
@@ -1,5 +1,6 @@
 {% extends "site_base.html" %}
 
+{% load static from staticfiles %}
 {% block lc_metadata %}
 {% with title.display_name as title_metadata %}
 {% include "includes/lc_metadata.html" %}
