--- a/core/templates/search_advanced.html
+++ b/core/templates/search_advanced.html
@@ -8,21 +8,21 @@
 {% endblock head_content %}
 {% block subcontent %}
 <div>
-    <form action="{% url chronam_search_pages_results %}" method="get" name="fulltext2" id="fulltext2" class="form-inline">
+    <form action="{% url chronam_search_pages_results %}" method="get" name="fulltext2" id="fulltext2">
         <fieldset>
             <legend>Limit Search</legend>
             <div class="row">
 	            <!-- state -->
-                <div class="span3"> <label for="id_states" class="control-label">Select State(s):</label>
+                <div class="span3"> <label for="id_states">Select State(s):</label>
                 {{ adv_search_form.state }} </div>
                 <!-- newspaper -->
-                <div class="span3"> <label for="id_lccns" class="control-label">Or Select Newspaper(s):</label>
+                <div class="span3"> <label for="id_lccns">Or Select Newspaper(s):</label>
                 {{ adv_search_form.lccn }} </div>
             </div>
             <div class="row">
                 <!-- page -->
                 <div class="span3">
-                    <label for="id_sequence" class="control-label">Specific page</label>
+                    <label for="id_sequence">Specific page</label>
                     {{ adv_search_form.sequence }}
                 </div>
             </div>
@@ -30,22 +30,36 @@
         <fieldset>
             <legend>Select Date Range</legend>
             <!-- date -->
-            <p class="help-block">Newspaper pages are available for newspapers published between <strong>{{adv_search_form.fulltextStartYear}}-{{adv_search_form.fulltextEndYear}}</strong>*</p>
-            <label for="id_date_from" class="control-label">from</label>
-            <input id="id_date_from" name="date1" class="span2" type="text" data-date-format="mm/dd/yyyy" data-date="01-01-{{adv_search_form.fulltextStartYear}}" value="01/01/{{adv_search_form.fulltextStartYear}}">
-            <label for="id_date_to" class="control-label">to</label>
-            <input id="id_date_to" name="date2" class="span2" type="text" data-date-format="mm/dd/yyyy" data-date="12-31-{{adv_search_form.fulltextEndYear}}" value="12/31/{{adv_search_form.fulltextEndYear}}">
+            <p class="help-block">Newspaper pages are available for newspapers published between <strong>{{adv_search_form.fulltextStartYear}}-{{adv_search_form.fulltextEndYear}}</strong></p>
+            <div class="row">
+                <div class="span2">
+                    <label for="id_date_from">from</label>
+                    <input id="id_date_from" name="date1" class="span2" type="text" data-date-format="mm/dd/yyyy" data-date="01-01-{{adv_search_form.fulltextStartYear}}" value="01/01/{{adv_search_form.fulltextStartYear}}">
+                </div>
+                <div class="span2">
+                    <label for="id_date_to">to</label>
+                    <input id="id_date_to" name="date2" class="span2" type="text" data-date-format="mm/dd/yyyy" data-date="12-31-{{adv_search_form.fulltextEndYear}}" value="12/31/{{adv_search_form.fulltextEndYear}}">
+                </div>
+            </div>
         </fieldset>
         <fieldset>
             <legend>Enter Search</legend>
             <label for="id_language" class="control-label">Language</label>
             {{ adv_search_form.language }}
-            <label for="id_ortext" class="control-label">...with <strong>any</strong> of the words:</label>
-            {{ adv_search_form.ortext }}
-            <label for="id_andtext" class="control-label">...with <strong>all</strong> of the words:</label>
-            {{ adv_search_form.andtext }}
-            <label for="id_phrasetext" class="control-label">...with the <strong>phrase</strong>:</label>
-            {{ adv_search_form.phrasetext }}
+            <div class="row">
+                <div class="span3">
+                    <label for="id_ortext" class="control-label">...with <strong>any</strong> of the words:</label>
+                    {{ adv_search_form.ortext }}
+                </div>
+                <div class="span3">
+                    <label for="id_andtext" class="control-label">...with <strong>all</strong> of the words:</label>
+                    {{ adv_search_form.andtext }}
+                </div>
+                <div class="span3">    
+                    <label for="id_phrasetext" class="control-label">...with the <strong>phrase</strong>:</label>
+                    {{ adv_search_form.phrasetext }}
+                </div>
+            </div>    
             <label for="id_proxtext_adv" class="control-label">...with the words:</label>
             <div class="form-inline">
                 {{ adv_search_form.proxtext }}
