--- a/core/templates/reports/batches.html
+++ b/core/templates/reports/batches.html
@@ -2,8 +2,8 @@
 {% load static from staticfiles %}
 
 {% block extra_link_types %}
-<link rel="alternate" type="application/atom+xml" href="{% url chronam_batches_atom %}" title="Batches Atom Feed" />
-<link rel="alternate" type="application/json" href="{% url chronam_batches_json %}" title="Batches JSON Feed" />
+<link rel="alternate" type="application/atom+xml" href="{% url 'chronam_batches_atom' %}" title="Batches Atom Feed" />
+<link rel="alternate" type="application/json" href="{% url 'chronam_batches_json'%}" title="Batches JSON Feed" />
     
 {% endblock %}
 
@@ -11,7 +11,7 @@
 
 <p>
 The Library of Congress regularly receives digitized newspaper content 
-from <a href="{% url chronam_awardees %}">grant awardees</a> in the <a
+from <a href="{% url 'chronam_awardees' %}">grant awardees</a> in the <a
     href="http://www.loc.gov/ndnp/">National Digital Newspaper Program</a>.
 Content is delivered in the form of batches, where each batch can contain
 one or more issues, from one or more newspapers. As batches are loaded into
@@ -21,8 +21,8 @@ batch can be discovered by clicking on the batch name link.
 
 <p>
 If you are interested in automated access to this data you may be interested 
-in the <a href="{% url chronam_batches_atom %}">Atom</a> and
-<a href="{% url chronam_batches_json %}">JSON</a> versions of this table.
+in the <a href="{% url 'chronam_batches_atom' %}">Atom</a> and
+<a href="{% url 'chronam_batches_json' %}">JSON</a> versions of this table.
 </p>
 
   {% ifnotequal paginator.num_pages 1 %}
@@ -70,9 +70,9 @@ in the <a href="{% url chronam_batches_atom %}">Atom</a> and
 
   <tr class="{% cycle 'lightGray' 'white' %}">
     <td>{{batch.created }}</td>
-    <td><a href="{% url chronam_batch batch.name %}">{{ batch.name }}</a></td>
+    <td><a href="{% url 'chronam_batch' batch.name %}">{{ batch.name }}</a></td>
     <td>
-        <a href="{% url chronam_awardee batch.awardee.org_code %}">
+        <a href="{% url 'chronam_awardee' batch.awardee.org_code %}">
             {{ batch.awardee.name }}
         </a>
     </td>
