more django 1.5 changes

--- a/core/templates/newspapers.html
+++ b/core/templates/newspapers.html
@@ -44,7 +44,7 @@
                 <td>{{title.issues.count}}</td>
                 <td><a href="{% url 'chronam_issue_pages' lccn title.first 1 %}">{{title.first|date:'Y-m-d'}}</a></td>
                 <td><a href="{% url 'chronam_issue_pages' lccn title.last 1 %}">{{title.last|date:'Y-m-d'}}</a></td>
-                <td class="last">{% if title.has_essays %}<a href="{% url chronam_title lccn %}">Yes</a>{% endif %}</td>
+                <td class="last">{% if title.has_essays %}<a href="{% url 'chronam_title' lccn %}">Yes</a>{% endif %}</td>
             </tr>
             {% endwith %}
         {% endfor %}
