--- a/core/templates/reports/batches.html
+++ b/core/templates/reports/batches.html
@@ -30,7 +30,7 @@ in the <a href="{% url 'chronam_batches_atom' %}">Atom</a> and
       <div class="pageNavigator">
       Pages: 
       {% if page.has_previous %}
-      <a rel="prev" href="{% url chronam_batches_page page.previous_page_number %}"><img src="{% static 'images/pag_prev_on.gif' %}" alt="prev" width="13" height="13" /></a>
+      <a rel="prev" href="{% url 'chronam_batches_page' page.previous_page_number %}"><img src="{% static 'images/pag_prev_on.gif' %}" alt="prev" width="13" height="13" /></a>
       {% endif %}
       {% for page_number in page_range_short %}
       {% ifequal page_number "..." %}
@@ -40,13 +40,13 @@ in the <a href="{% url 'chronam_batches_atom' %}">Atom</a> and
       {% ifequal page_number page.number %}
       <span class="off">{{page_number}}</span> 
       {% else %}
-      <a href="{% url chronam_batches_page page_number %}">{{ page_number }}</a> 
+      <a href="{% url 'chronam_batches_page' page_number %}">{{ page_number }}</a> 
       {% endifequal %}
 
       {% endifequal %}
       {% endfor %}
       {% if page.has_next %}
-      <a rel="next" href="{% url chronam_batches_page page.next_page_number %}"><img src="{% static 'images/pag_next_on.gif' %}" alt="next" width="13" height="13" /></a> 
+      <a rel="next" href="{% url 'chronam_batches_page' page.next_page_number %}"><img src="{% static 'images/pag_next_on.gif' %}" alt="next" width="13" height="13" /></a> 
       {% endif %}
     </div>
   </div>
