Django 1.5 changes contd...

--- a/core/templates/about_api.html
+++ b/core/templates/about_api.html
@@ -335,17 +335,17 @@ bulk access to the underlying data sets. The initial bulk data sets include:
 
 <ul>
     <li>Batches: each batch of digitized content that is provided by awardees is
-    made available via the Batches <a href="{% url 'chronam_batches' %}">HTML</a>,
-    <a href="{% url 'chronam_batches_atom' %}">Atom</a> and 
-    <a href="{% url 'chronam_batches_json' %}">JSON</a> views. These views provide
+    made available via the Batches <a href="{% url chronam_batches %}">HTML</a>,
+    <a href="{% url chronam_batches_atom %}">Atom</a> and 
+    <a href="{% url chronam_batches_json %}">JSON</a> views. These views provide
     links to where the files comprising the batch can be fetched with a web
     crawling tool like <a href="http://www.gnu.org/software/wget/">wget</a>.</li>
     <li>OCR Bulk Data: the complete set of OCR XML and text files that make up
     the newspaper collection are made available as compressed archive files. 
-    These files are listed in the <a href="{% url 'chronam_ocr' %}">OCR</a> 
+    These files are listed in the <a href="{% url chronam_ocr %}">OCR</a> 
     report, and are also made available via   
-    <a href="{% url 'chronam_ocr_atom' %}">Atom</a> and
-    <a href="{% url 'chronam_ocr_json' %}">JSON</a> feeds that will allow
+    <a href="{% url chronam_ocr_atom %}">Atom</a> and
+    <a href="{% url chronam_ocr_json %}">JSON</a> feeds that will allow
     you to build automated workflows for updating your local collection.</li>
 </ul>
 </p>
